--- a/reports/index.html
+++ b/reports/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="refresh" content="0; url=https://willysshawarma.carrd.co/" />
-    <title>Redirecting...</title>
+    <title>WSG Staff portal </title>
   </head>
   <body>
     <p>If you are not redirected, <a href="https://willysshawarma.carrd.co/">click here</a>.</p>
